# rosetta

./: .gitignore  README.md  _main.py  main_cli.py  pyproject.toml
data/: db.pkl  de-nl.csv  de-nl.txt  en-nl.csv  en-nl.txt  grammar.db  ru-en.csv  ru-en.txt  words.csv
src/: convert2msx.py  grammar_cli.py  input_ru.py  main_cli.py  main_web.py  polly.py  structs.py  ta.py  text_utils.py  translate.py  vocabulary.py  voice.py  voice_macos.py  voice_polly.py  word_translator.py
src/static/: style.css
src/templates/: reboot.html  reboot2.html  setup.html  setup2.html  setup3.html
test/: test_text_utils.py
