[tool.poetry]
name = "rosetta"
version = "0.1.0"
description = ""
authors = ["Gilbert Francois Duivesteijn <info@gilbertfrancois.com>"]

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^1.4.1"
Cython = "^0.29.28"
Kivy = "^2.1.0"
kivy-garden = "^0.1.4"
kivy-ios = "^1.3.0"
colorama = "^0.4.4"
boto3 = "^1.21.19"
pydub = "^0.25.1"

[tool.poetry.dev-dependencies]
pdbpp = "^0.10.3"
ipython = "^8.1.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
