[tool.black]
# How many characters per line to allow.
line-length = 88

# Python versions that should be supported by Black's output.
target-version = ["py312"]

[tool.isort]
# Profiles allow for easy interoperability with common projects and code styles.
profile = "black"

[tool.pylint.main]
# A comma-separated list of package or module names from where C extensions may
# be loaded. Extensions are loading into the active Python interpreter and may
# run arbitrary code.
extension-pkg-allow-list = ["cv2", "jellyfish"]

# Minimum Python version to use for version dependent checks. Will default to the
# version used to run pylint.
py-version = "3.12"

# Disable the message, report, category or checker with the given id(s). You can
# either give multiple identifiers separated by comma (,) or put this option
# multiple times (only on the command line, not in the configuration file where
# it should appear only once). You can also use "--disable=all" to disable
# everything first and then re-enable specific checks. For example, if you want
# to run only the similarities checker, you can use "--disable=all
# --enable=similarities". If you want to run only the classes checker, but have
# no Warning level messages displayed, use "--disable=all --enable=classes
# --disable=W".
disable = ["raw-checker-failed", "bad-inline-option", "locally-disabled", "file-ignored", "suppressed-message", "useless-suppression", "deprecated-pragma", "use-symbolic-message-instead", "line-too-long", "missing-function-docstring", "missing-class-docstring", "missing-module-docstring"]

# Good variable names which should always be accepted, separated by a comma.
good-names = ["Run", "_", "a", "b", "c", "d", "e", "ex", "f", "g", "h", "i", "j", "k", "l", "m", "n", "o", "p", "q", "r", "s", "t", "u", "v", "w", "x", "y", "z"]

# Set the output format. Available formats are text, parseable, colorized, json
# and msvs (visual studio). You can also give a reporter class, e.g.
# mypackage.mymodule.MyReporterClass.
output-format = "colorized"

[tool.poetry]
name = "rosetta"
version = "0.1.0"
description = ""
authors = ["Gilbert Francois Duivesteijn <info@gilbertfrancois.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2.1.4"
colorama = "^0.4.6"
boto3 = "^1.34.18"
requests = "^2.31.0"
pydub = "^0.25.1"
pytesseract = "^0.3.10"
opencv-python = "^4.9.0.80"
numpy = "^1.26.3"
jellyfish = "^1.0.3"


[tool.poetry.group.dev.dependencies]
ipython = "^8.20.0"
pylint = "^3.0.3"
black = "^23.12.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
